# Serez-Code

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  MEMORIA_SESION_WORKERS.md  README.md  TESTS.md  bugs.md  dist-workspace.toml  fuzz_parser.py  install.ps1  install.sh  run_benchmarks.ps1  run_tests.ps1  run_tests.sh  test.serez
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/: 01_task_manager.sz  02_statistics.sz  03_text_analyzer.sz  04_bank_system.sz  05_data_pipeline.sz  06_neural_net.sz  07_packet_forge.sz  08_memory_arena.sz  09_gui_window.sz
benchmarks/: 00_startup.sz  01_arith_loop.sz  02_fib_recursive.sz  03_fib_iterative.sz  04_string_ops.sz  05_array_ops.sz  06_closures.sz  07_oop.sz  08_dict_ops.sz  09_exceptions.sz  10_higher_order.sz  11_scope_stress.sz  12_mixed_realistic.sz  13_attention_ops.sz  14_task_concurrency.sz  15_decimal_exacto.sz  task_worker_bench.worker
src/: ast.rs  evaluator.rs  lexer.rs  lsp_main.rs  main.rs  package_manager.rs  parser.rs  region.rs  repl.rs  scope.rs  test_run.rs  token.rs  type_checker.rs
src/compiler/: hir.rs  hir_lower.rs  llvm_emit.rs  mir.rs  mir_lower.rs  mod.rs  types.rs
src/evaluator/: builtins.rs  check.rs  classes.rs  control.rs  expr.rs  methods_array.rs  methods_dec.rs  methods_set.rs  methods_string.rs  methods_tensor.rs  mod.rs  namespaces.rs  namespaces_autodiff.rs  namespaces_binary.rs  namespaces_crypto.rs  namespaces_datetime.rs  namespaces_gpu.rs  namespaces_gui.rs  namespaces_media.rs  namespaces_memory.rs  namespaces_os.rs  namespaces_random.rs  namespaces_regex.rs  namespaces_socket.rs  namespaces_task.rs  ops.rs  stmt.rs  svg.rs
src/evaluator/namespaces_gui/: css.rs  render.rs
src/lsp/: analysis.rs  builtins.rs  builtins_gen.rs  mod.rs  rpc.rs  server.rs
tests/: 01_arithmetic.expected  01_arithmetic.sz  01_basic.expected  01_basic.sz  01_variables.expected  01_variables.sz  02_arithmetic.expected  02_arithmetic.sz  02_variables.expected  02_variables.sz  02_variables_scope.expected  02_variables_scope.sz  03_control_flow.expected  03_control_flow.sz  03_strings.expected  03_strings.sz  04_control_flow.expected  04_control_flow.sz  04_functions.expected  04_functions.sz  05_arrays.expected  05_arrays.sz  05_functions.expected  05_functions.sz  06_arrays.expected  06_arrays.sz  06_strings.expected  06_strings.sz  07_dicts.expected  07_dicts.sz  08_classes.expected  08_classes.sz  09_interfaces.expected  09_interfaces.sz  10_lambdas.expected  10_lambdas.sz  11_nullables.expected  11_nullables.sz  12_math.expected  12_math.sz  (+443 more)
tests/registry/test-pkg/1.0.0/: index.sz
tools/: gen_lsp_builtins.py  lsp_smoke.py
vscode-serez/: .vscodeignore  LICENSE  README.md  extension.js  formatter.js  language-configuration.json  package.json  serez-code-0.1.0.vsix
vscode-serez/syntaxes/: serez.tmLanguage.json
vscode-serez/themes/: serez-dark-color-theme.json
wix/: main.wxs
