[package]
name = "serez-code"
version = "3.9.0"
edition = "2024"
description = "Serez Code - The programming language for AI, UI, systems, and GPU in a single runtime"
license = "MIT"
repository = "https://github.com/Sergio3215/serez-code"
homepage = "https://github.com/Sergio3215/serez-code"
authors = ["SerezDev"]
publisher = "SerezDev"

[package.metadata.wix]
upgrade-guid = "F9F26980-7808-45C3-B8EB-8C3A1F926920"
path-guid = "21386D8D-F367-40C9-AB61-343B280BDE02"
license = false
eula = false

[features]
llvm = ["inkwell"]

[dependencies]
notify = "8"
ureq = "2"
zip = "2"
crossterm = "0.28"
minifb = "0.27"
font8x8 = "0.3"

[dependencies.inkwell]
version = "0.4"
optional = true
features = ["llvm17-0"]

[[bin]]
name = "sz"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
