[package]
name = "serez-code"
version = "9.2.5"
edition = "2024"
description = "Serez Code - The programming language for AI, UI, systems, and GPU in a single runtime"
license = "MIT"
repository = "https://github.com/Sergio3215/serez-code"
homepage = "https://github.com/Sergio3215/serez-code"
authors = ["SerezDev"]

# `publisher` no es una clave estándar de [package]; va en metadata (custom) para
# no disparar el warning "unused manifest key" y quedar disponible para tooling.
[package.metadata]
publisher = "SerezDev"

[package.metadata.wix]
upgrade-guid = "F9F26980-7808-45C3-B8EB-8C3A1F926920"
path-guid = "21386D8D-F367-40C9-AB61-343B280BDE02"
license = false
eula = false

[features]
default = ["audio"]
llvm = ["inkwell"]
# Audio (namespace Media, vía rodio). On por defecto; se apaga con
# --no-default-features para el release estático de Linux (musl), donde
# enlazar ALSA es inviable. Sin esta feature, Media.* da un error capturable.
audio = ["dep:rodio"]

[dependencies]
notify = "8"
ureq = "2"
zip = "2"
crossterm = "0.28"
winit = "0.30.13"
softbuffer = "0.4.8"
cosmic-text = "0.17.0"
image = "0.25.9"
tiny-skia = "0.11"
arboard = "3.6.1"
rfd = "0.15"
ed25519-dalek = "2"
rodio = { version = "0.20", optional = true }
getrandom = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rust_decimal = { version = "1", default-features = false, features = ["std"] }
serde_json = "1"

[dependencies.inkwell]
version = "0.4"
optional = true
features = ["llvm17-0"]

[[bin]]
name = "sz"
path = "src/main.rs"

# LSP server (editor support). Reuses the frontend modules; see src/lsp_main.rs.
[[bin]]
name = "sz-lsp"
path = "src/lsp_main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
